fix(ui): user events overlap on first event

--- a/frontend/app/components/Session_/EventsBlock/event.module.css
+++ b/frontend/app/components/Session_/EventsBlock/event.module.css
@@ -66,7 +66,6 @@
    &.highlighted {
     transition: all 0.2s;
     background-color: $active-blue;
-    box-shadow: 0 0 0 2px $active-blue;
   }
 
   &.red {
